tests/bad/enum_get_member_dot.ae
/// fail: Enum has no method with this name

enum Variable {
    Integer
    IntLiteral
    Float
    String
}

def main() {
    let x = Variable::Integer
    let y = x.Float
}